# VulkanEngine

./: CMakeLists.txt
shaders/: sshader.vert
src/: main.cpp
src/core/include/: app.h  buffer.h  camera.h  descriptors.h  device.h  frameinfo.h  model.h  objects.h  pipeline.h  renderer.h  swapchain.h  window.h
src/core/include/input/: keyboard_input.h
src/core/include/rendersystems/: baserendersystem.h
src/core/src/: app.cpp  buffer.cpp  camera.cpp  descriptors.cpp  device.cpp  model.cpp  objects.cpp  pipeline.cpp  renderer.cpp  swapchain.cpp  window.cpp
src/core/src/input/: keyboard_input.cpp
src/core/src/rendersystems/: baserendersystem.cpp
src/utils/include/: e_hash.h  e_internalfileprovider.h
src/utils/src/: e_filereader.cpp  e_logger.cpp
